RESOLVED FIXED219700
Some WebGL tests crash in WebKit::RemoteRenderingBackendProxy::willAppendItem(WebCore::RenderingResourceIdentifier)
https://bugs.webkit.org/show_bug.cgi?id=219700
Summary Some WebGL tests crash in WebKit::RemoteRenderingBackendProxy::willAppendItem...
Kimmo Kinnunen
Reported 2020-12-09 11:50:13 PST
../Internal/Tools/Scripts/run-webkit-tests --debug --use-gpu-process fast/canvas/webgl/canvas-test.html SHOULD NEVER BE REACHED /Users/kkinnunen/WebKit/OpenSource/Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp(191) : void WebKit::RemoteRenderingBackendProxy::willAppendItem(WebCore::RenderingResourceIdentifier) 1 0x58f171e69 WTFCrash 2 0x56000667b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x561919940 WebKit::RemoteRenderingBackendProxy::willAppendItem(WTF::ObjectIdentifier<WebCore::RenderingResourceIdentifierType>) 4 0x5619797c3 WebKit::RemoteImageBufferProxy<WebKit::ImageBufferShareableMappedIOSurfaceBackend>::willAppendItemOfType(WebCore::DisplayList::ItemType) 5 0x5734b5325 WebCore::DisplayList::Recorder::willAppendItemOfType(WebCore::DisplayList::ItemType) 6 0x5734b8aab void WebCore::DisplayList::Recorder::append<WebCore::DisplayList::FillRect, WebCore::FloatRect const&>(WebCore::FloatRect const&) 7 0x5734b8a6d WebCore::DisplayList::Recorder::fillRect(WebCore::FloatRect const&) 8 0x57340f9ac WebCore::GraphicsContext::fillRect(WebCore::FloatRect const&) 9 0x5727fda69 WebCore::CanvasRenderingContext2DBase::fillRect(float, float, float, float) 10 0x56fa53685 WebCore::jsCanvasRenderingContext2DPrototypeFunction_fillRectBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSCanvasRenderingContext2D*) 11 0x56fa5301c long long WebCore::IDLOperation<WebCore::JSCanvasRenderingContext2D>::call<&(WebCore::jsCanvasRenderingContext2DPrototypeFunction_fillRectBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSCanvasRenderingContext2D*)), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) 12 0x56f9e3eb4 WebCore::jsCanvasRenderingContext2DPrototypeFunction_fillRect(JSC::JSGlobalObject*, JSC::CallFrame*) 13 0x567898201178 14 0x58f74c8c6 llint_entry 15 0x58f74c96e llint_entry 16 0x58f72b200 vmEntryToJavaScript 17 0x590594d8b JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 18 0x590595547 JSC::Interpreter::executeCall(JSC::JSGlobalObject*, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 19 0x5908e4b4d JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 20 0x5908e4c2f JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 21 0x5908e4f12 JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 22 0x571bac7ae WebCore::JSExecState::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 23 0x571c54770 WebCore::ScheduledAction::executeFunctionInContext(JSC::JSGlobalObject*, JSC::JSValue, WebCore::ScriptExecutionContext&) 24 0x571c541a5 WebCore::ScheduledAction::execute(WebCore::Document&) 25 0x571c54063 WebCore::ScheduledAction::execute(WebCore::ScriptExecutionContext&) 26 0x572f0030f WebCore::DOMTimer::fired() 27 0x5731d34f4 WebCore::ThreadTimers::sharedTimerFiredInternal() 28 0x5731de321 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 29 0x5731de2ce WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 30 0x56f380a12 WTF::Function<void ()>::operator()() const 31 0x57319a39b WebCore::MainThreadSharedTimer::fired() LEAK: 1 WebPageProxy
Attachments
Patch (2.23 KB, patch)
2020-12-09 12:44 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-12-09 12:44:41 PST
EWS
Comment 2 2020-12-09 13:39:22 PST
Committed r270599: <https://trac.webkit.org/changeset/270599> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415792 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-09 13:40:16 PST
Note You need to log in before you can comment on or make changes to this bug.